feat: web pipeline (#1406)
---------

Co-authored-by: James Lott <james.l@jarv.us>
Co-authored-by: David Gamez Diaz <1192523+davidgamez@users.noreply.github.com>

--- a/web/service/Dockerfile
+++ b/web/service/Dockerfile
@@ -8,6 +8,9 @@ USER spring:spring
 ARG JAR_FILES=build/libs/\*.jar
 ARG PROPERTIES_FILE=build/resources/main/application.properties
 ARG CREDS_FILE=src/main/resources/web-based-gtfs-validator-a088ec5f045d.json
+ARG CURRENT_VERSION
+RUN test -n "$CURRENT_VERSION" || { echo "missing required build arg: CURRENT_VERSION"; exit 1; }
+ENV CURRENT_VERSION=${CURRENT_VERSION}
 
 COPY ${JAR_FILES} /
 COPY ${PROPERTIES_FILE} /
@@ -16,4 +19,4 @@ COPY ${CREDS_FILE} /
 ADD ./newrelic/newrelic.jar /newrelic/newrelic.jar
 ADD ./newrelic/newrelic.yml /newrelic/newrelic.yml
 
-ENTRYPOINT ["java","-Xmx12g","-javaagent:/newrelic/newrelic.jar","-jar","/service-4.0.1-SNAPSHOT.jar"]
+ENTRYPOINT exec java -Xmx12g  -javaagent:/newrelic/newrelic.jar -jar /service-${CURRENT_VERSION}.jar
