--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ plugins {
     id 'java'
     id 'test-report-aggregation'
     id 'com.github.sherter.google-java-format' version '0.9'
-    id "io.freefair.aggregate-javadoc-jar" version "6.4.3"
+    id "io.freefair.aggregate-javadoc" version "6.4.3"
     id "pl.allegro.tech.build.axion-release" version "1.13.6"
 }
 
