--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,6 +22,8 @@ plugins {
 dependencies {
     implementation project(':model')
     annotationProcessor project(':processor:notices')
+    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc4'
+    compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'org.apache.commons:commons-compress:1.20'
