--- a/model/build.gradle
+++ b/model/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
 }
 
 compileJava {
