--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 contact_links:
   - name: Slack channel
-    url: https://docs.google.com/forms/d/e/1FAIpQLSczZbZB9ql_Xl-1uBtmvYmA0fwfm1UX92SyWAdkuMEDfxac5w/viewform
+    url: https://share.mobilitydata.org/slack
     about: Join the gtfs-validators channel to discuss with other community members, and receive updates.
   - name: Discussions
     url: https://github.com/MobilityData/gtfs-validator/discussions/new
