--- a/Dockerfile_arm64v8
+++ b/Dockerfile_arm64v8
@@ -1,6 +1,4 @@
-# FROM --platform=$BUILDPLATFORM gradle:7-jdk11-alpine AS build
-
-FROM --platform=$BUILDPLATFORM eclipse-temurin:11 AS build
+FROM arm64v8/gradle:7-jdk11 AS build
 
 COPY --chown=gradle:gradle . /build
 WORKDIR /build
@@ -11,7 +9,7 @@ RUN ./gradlew shadowJar \
     -Prelease.forceVersion="${VERSION_TAG%-SNAPSHOT}"
 
 
-FROM --platform=$BUILDPLATFORM openjdk:11-slim
+FROM openjdk:11-slim
 COPY --from=build /build/cli/build/libs/gtfs-validator-*-cli.jar /gtfs-validator-cli.jar
 WORKDIR /
 
