--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -25,6 +25,7 @@ jobs:
     name: Build and upload packaged app
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         os: [ macos-latest, windows-latest, ubuntu-latest ]
     steps:
