feat: adding PR as trigger

--- a/.github/workflows/notice_migration_generation.yml
+++ b/.github/workflows/notice_migration_generation.yml
@@ -4,6 +4,8 @@ on:
   release:
     types: [ prereleased, released ]
 #  For testing
+  pull_request:
+    branches: [ master ]
   workflow_dispatch:
 
 jobs:
