feat: updated python script

--- a/.github/workflows/notice_migration_generation.yml
+++ b/.github/workflows/notice_migration_generation.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  generate_notice_migration:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
