--- a/scripts/notice-migration-generator/requirements.txt
+++ b/scripts/notice-migration-generator/requirements.txt
@@ -1,17 +1,8 @@
-cachetools==4.2.2
-certifi==2022.12.7
-charset-normalizer==2.0.4
-idna==3.2
-pandas==1.4.3
-packaging==21.0
-protobuf==3.18.3
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.31.0
-rsa==4.7.2
+importlib-metadata==6.8.0
+numpy==1.25.0
+pandas==2.0.3
+python-dateutil==2.8.2
+pytz==2023.3
+tzdata==2023.3
 six==1.16.0
-urllib3==1.26.6
-numpy==1.22.0
+zipp==3.15.0
