--- a/.github/workflows/notice_migration_generation.yml
+++ b/.github/workflows/notice_migration_generation.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Print GitHub Context
+        run: echo "${{ toJson(github) }}"
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
