--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
   release:
     types: [ prereleased, released ]
+  workflow_dispatch:
 
 jobs:
   validate_gradle_wrapper:
