--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,10 +2,9 @@ name: Docker image
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, test-multiple-docker-platform ]
   release:
     types: [ prereleased, released ]
-  workflow_dispatch:
 
 jobs:
   validate_gradle_wrapper:
