--- a/.github/workflows/create_pr_if_referencemd_changes.yml
+++ b/.github/workflows/create_pr_if_referencemd_changes.yml
@@ -1,11 +1,11 @@
-name: Check if Google's reference.md has changed, create new PR
+name: Check and Create PR for reference.md changes
 
 on:
   schedule:
     - cron: '0 4 * * *'  # This triggers the workflow every day at 4 AM UTC
 
 jobs:
-  check-file-commits:
+  check-and-create-pr:
     runs-on: ubuntu-latest
 
     steps:
@@ -16,46 +16,30 @@ jobs:
         id: date
         run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
-      - name: Check for changed commits
-        id: changed_commits
-        uses: tj-actions/changed-commits@v37
+      - name: Check for Changes in reference.md
+        id: changed-files
+        uses: tj-actions/changed-files@v36
+        with:
+          files: 'gtfs/spec/en/reference.md'
+          token: ${{ secrets.GTFS_VALIDATOR_CHECK_REFERENCE_MD_UPDATES }}
+          repository: google/transit
+          ref: master
+          ignore-whitespace: true
+      
+      - name: Create Pull Request
+        if: steps.changed-files.outputs.files-changed > 0
+        uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GTFS_VALIDATOR_CHECK_REFERENCE_MD_UPDATES }}
-          repository: google/transit  # Change this to the source repository
-          ref: master
-          path: gtfs/spec/en/reference.md
+          commit-message: "Changes made to `reference.md` from Google Transit's repo"
+          title: "Changes made to `reference.md` from Google Transit's repo"
+          body: "Commits have been made to the `reference.md` file in the last 24 hours. Automatically generated pull request."
+          branch: "reference-md-commits-${{ steps.date.outputs.date }}"
+          base: "master"
+          labels: "automated-pr"
 
-      - name: Create branch
-        run: |
-          date=$(echo ${{ steps.date.outputs.date }})
-          branch_name="reference-md-commits-${date}"
-          git checkout -b $branch_name
-          git push origin $branch_name
-
-      - name: Create pull request
-        if: steps.changed_commits.outputs.commits == 'true'
-        uses: actions/github-script@v4
-        with:
-          github-token: ${{ secrets.GTFS_VALIDATOR_CHECK_REFERENCE_MD_UPDATES }}
-          script: |
-            const title = "Changes made to `reference.md` from Google Transit's repo";
-            const body = "Commits have been made to the reference.md file in the last 24 hours. Automatically generated pull request.";
-            const head = "${{ steps.date.outputs.date }}";
-            const base = "master";  // Change this to your target branch
-            const changes = [
-              {
-                files: ["gtfs/spec/en/reference.md"],
-                commit: "Changes made to `reference.md`",
-                content: "... from Google Transit's repo in the last 24 hours."
-              }
-            ];
-            const pullRequest = await github.pulls.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title,
-              body,
-              head,
-              base,
-              changes
-            });
-            console.log(`Pull request created: ${pullRequest.data.html_url}`);
+          files: |
+            gtfs/spec/en/reference.md
+            
+          reviewers: emmambd
+          assignees: emmambd
