Small fix, required double-quotes
The error message is telling you that there is an unexpected symbol, a parenthesis, in the expression github.event.issue.labels.contains('bug'). The correct syntax for this expression is github.event.issue.labels.contains("bug").

--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -5,7 +5,7 @@ on:
       - opened
 jobs:
   triage:
-    if: github.event.issue.labels.contains('bug')
+    if: github.event.issue.labels.contains("bug")
     runs-on: ubuntu-latest
     steps:
       - name: Create card
@@ -23,5 +23,5 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: "Thank you for your reporting a bug. The issue has been placed in [triage](https://github.com/MobilityData/gtfs-validator/projects/1), the MobilityData team will follow-up on it."
+              body: "Thank you for your reporting a bug. The issue has been placed in [triage](https://github.com/orgs/MobilityData/projects/60/views/1), the MobilityData team will follow-up on it."
             })
