web/service: add stg to gradle.properties

--- a/web/service/gradle.properties
+++ b/web/service/gradle.properties
@@ -7,3 +7,13 @@ env.prd.svcAPMLicenseDst            = newrelic/newrelic.yml
 env.prd.svcSecretPropertiesProvider = gcloud-secrets
 env.prd.svcSecretPropertiesSrc      = web-validator-properties
 env.prd.svcSecretPropertiesDst      = src/main/resources/application.properties
+
+env.stg.svcCredentialProvider       = gcloud-secrets
+env.stg.svcCredentialSrc            = web-validator-sa-key
+env.stg.svcCredentialDst            = src/main/resources/web-based-gtfs-validator-a088ec5f045d.json
+env.stg.svcAPMLicenseProvider       = gcloud-secrets
+env.stg.svcAPMLicenseSrc            = web-validator-newrelic-license
+env.stg.svcAPMLicenseDst            = newrelic/newrelic.yml
+env.stg.svcSecretPropertiesProvider = gcloud-secrets
+env.stg.svcSecretPropertiesSrc      = web-validator-properties
+env.stg.svcSecretPropertiesDst      = src/main/resources/application.properties
