--- a/web/pipeline/stg.env
+++ b/web/pipeline/stg.env
@@ -3,3 +3,5 @@ WEB_BUILD_ENV=stg
 WEB_DEPLOY_CLIENT_BUCKET=stg-gtfs-validator-web
 WEB_DEPLOY_SVC_IMAGE=gcr.io/web-based-gtfs-validator/gtfs-validator-web
 WEB_DEPLOY_SVC_CLOUDRUN=stg-gtfs-validator-web
+PUBLIC_CLIENT_API_ROOT=https://stg-gtfs-validator-web-mbzoxaljzq-ue.a.run.app
+PUBLIC_CLIENT_REPORTS_ROOT=https://staging-gtfs-validator-results.mobilitydata.org
