Added `.github/workflows/**` to `paths-ignore`
To prevent the whole process of testing because an action was changed, added `.github/workflows/**` to the list of excluded paths.

--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -15,6 +15,7 @@ on:
       - 'triage.yml'
       - 'acceptance_test.yml'
       - 'web/**'
+      - '.github/workflows/**'
   pull_request:
     branches: [ master ]
     paths-ignore:
@@ -29,6 +30,7 @@ on:
       - 'triage.yml'
       - 'acceptance_test.yml'
       - 'web/**'
+      - '.github/workflows/**'
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
