--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -41,6 +41,7 @@ jobs:
 
       - name: Import GPG key
         run: |
+          cat modified_key.asc
           gpg --batch --import modified_key.asc
           gpg --list-keys
 #
