--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -62,6 +62,7 @@ jobs:
           cat gpg_private_key.asc
           echo "modified key end"
           gpg --batch --import gpg_private_key.asc
+          echo "List of keys"
           gpg --list-keys
 #
 #      - name: Build and Publish
