--- a/build.gradle
+++ b/build.gradle
@@ -91,7 +91,8 @@ allprojects {
     task printVersion {
         doLast {
             println "Project version: ${project.version}"
-            println "My Environment Variable: ${System.getenv('SONATYPE_USERNAME')}"
+            println "My Environment Variable: "
+            println System.getenv('SONATYPE_USERNAME')
         }
     }
 }
