--- a/core/build.gradle
+++ b/core/build.gradle
@@ -101,7 +101,7 @@ publishing {
             url = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2'
             //                       mavenLocal()
             credentials {
-                username System.getenv("SONATYPE_USERNAME")
+                username System.getenv("SONATYPE_NAME")
                 password System.getenv("SONATYPE_PASSWORD")
             }
         }
